2007-01-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (shoot_dialog): fixed tooltip.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannelundo.[ch]: renamed these files...

	* app/core/gimpmaskundo.[ch]: ...to these. We'll need the name
	GimpChannelUndo for something else later.

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpimage-undo-push.c: changed accordingly.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/vectors/Makefile.am
	* app/vectors/vectors-types.h
	* app/vectors/gimpvectorspropundo.[ch]: new undo class which
	implements GIMP_UNDO_VECTORS_REPOSITION.

	* app/core/gimpimage-undo-push.c: use it here.

	* app/Makefile.am: another lame linker hack to make it build with
	the new file that is not used in app/vectors/ itself.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpguideundo.c
	* app/core/gimpimageundo.c
	* app/core/gimplayerpropundo.c
	* app/core/gimpsamplepointundo.c
	* app/core/gimpdrawableundo.c
	* app/core/gimpitempropundo.c
	* app/core/gimpchannelpropundo.c
	* app/core/gimpchannelundo.c
	* app/core/gimpitemundo.c: chain up last in GimpUndo::free(), use
	switch() in place of if/else when there is more than one undo type
	implemented in one file, g_assert_not_reached() in default:, some
	minor cleanups.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/text/gimptextundo.[ch]: add support for
	GIMP_UNDO_TEXT_LAYER_MODIFIED.

	* app/core/gimpimage-undo-push.c: use it here.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpguideundo.[ch]
	* app/core/gimpsamplepointundo.[ch]: new classes implementing
	guide and sample point undos.

	* app/core/gimpimage-undo-push.c: use them and remove all guide
	and sample point code.

2007-01-30  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpsamplepoint.[ch]: new files implementing new(),